# ChangeLog for app-laptop/batti
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-laptop/batti/ChangeLog,v 1.2 2010/04/13 13:18:23 idl0r Exp $

  13 Apr 2010; Christian Ruppert <idl0r@gentoo.org> batti-0.3.1.ebuild:
  Add a warning to let the user know he has to be in the messagebus group.
  Fix pygtk dependency.

*batti-0.3.1 (12 Apr 2010)

  12 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> +batti-0.3.1.ebuild:
  Initial commit wrt #314797 by Arthur Spitzer.
