@@ -1,6 +1,10 @@
 # ChangeLog for app-laptop/batti
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/batti/ChangeLog,v 1.2 2010/04/13 13:18:23 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/batti/ChangeLog,v 1.3 2010/04/13 19:32:09 idl0r Exp $
+
+  13 Apr 2010; Christian Ruppert <idl0r@gentoo.org> batti-0.3.1.ebuild:
+  Remove ewarn to tell the user he has to be in the messagebus group. Depend
+  on sys-power/upower or sys-apps/devicekit-power.
 
   13 Apr 2010; Christian Ruppert <idl0r@gentoo.org> batti-0.3.1.ebuild:
   Add a warning to let the user know he has to be in the messagebus group.
